--- a/platformio.ini
+++ b/platformio.ini
@@ -15,11 +15,12 @@ framework = arduino
 
 monitor_speed = 115200
 
-lib_deps=
-    Wifi
-    FS
-    SPIFFS
-    https://github.com/me-no-dev/ESPAsyncTCP.git
-    https://github.com/me-no-dev/ESPAsyncWebServer.git
-    https://github.com/bblanchon/ArduinoJson.git
-   
+lib_deps = 
+	Wifi
+	FS
+	SPIFFS
+	https://github.com/me-no-dev/ESPAsyncTCP.git
+	https://github.com/me-no-dev/ESPAsyncWebServer.git
+	https://github.com/bblanchon/ArduinoJson.git
+	mysensors/MySensors@^2.3.2
+	
