--- a/platformio.ini
+++ b/platformio.ini
@@ -23,4 +23,6 @@ lib_deps =
 	https://github.com/me-no-dev/ESPAsyncWebServer.git
 	https://github.com/bblanchon/ArduinoJson.git
 	mysensors/MySensors@^2.3.2
+	ayushsharma82/EasyDDNS @ ^1.8.0
+
 	
